k8s/elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./k8s/ --controller deployment
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: elasticsearch
  name: elasticsearch
  namespace: transactions
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elasticsearch
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./k8s/ --controller deployment
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/transactions-deployment-default: "true"
        io.kompose.service: elasticsearch
    spec:
      containers:
        - env:
            - name: discovery.type
              value: single-node
          image: docker.elastic.co/elasticsearch/elasticsearch:7.8.1
          name: transactions-elastic-search
          ports:
            - containerPort: 9200
            - containerPort: 9300
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: esdata
      restartPolicy: Always
      volumes:
        - name: esdata
          persistentVolumeClaim:
            claimName: esdata
status: {}
