k8s/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./k8s/ --controller deployment
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
  namespace: transactions
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./k8s/ --controller deployment
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/transactions-deployment-default: "true"
        io.kompose.service: keycloak
    spec:
      containers:
        - env:
            - name: DB_DATABASE
              value: keycloak_dev
            - name: DB_ADDR
              value: postgres
            - name: DB_SCHEMA
              value: public
            - name: DB_VENDOR
              value: POSTGRES
            - name: POSTGRES_DB
              value: keycloak_dev
            - name: DB_USER
              valueFrom:
                secretKeyRef:
                  name: keycloak-db-credentials
                  key: username
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: keycloak-db-credentials
                  key: password
            - name: KEYCLOAK_USER
              valueFrom:
                secretKeyRef:
                  name: keycloak-credentials
                  key: username
            - name: KEYCLOAK_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: keycloak-credentials
                  key: password
          image: quay.io/keycloak/keycloak:15.0.2
          name: keycloak
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
