k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./k8s/ --controller deployment
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  name: mongo
  namespace: transactions
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./k8s/ --controller deployment
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/transactions-deployment-default: "true"
        io.kompose.service: mongo
    spec:
      containers:
        - image: mongo:4.2.6
          name: transactions-mongo-db
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: transactions-data-volume
      restartPolicy: Always
      volumes:
        - name: transactions-data-volume
          persistentVolumeClaim:
            claimName: transactions-data-volume
status: {}
