k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./k8s/ --controller deployment
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
  namespace: transactions
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./k8s/ --controller deployment
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/transactions-deployment-default: "true"
        io.kompose.service: postgres
    spec:
      containers:
        - image: postgres:13.4-alpine
          name: postgres
          resources: {}
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data-keycloak
      restartPolicy: Always
      volumes:
        - name: postgres-data-keycloak
          persistentVolumeClaim:
            claimName: postgres-data-keycloak
status: {}
