k8s/transactions-config-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./k8s/ --controller deployment
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: transactions-config-server
  name: transactions-config-server
  namespace: transactions
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: transactions-config-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./k8s/ --controller deployment
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/transactions-deployment-default: "true"
        io.kompose.service: transactions-config-server
    spec:
      containers:
        - image: jugirard/transactions-config-server:v1.2.4.2
          name: transactions-config-server
          ports:
            - containerPort: 8888
          resources: {}
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
      restartPolicy: Always
      volumes:
      - name: config-volume
        configMap:
          # Provide the name of the ConfigMap containing the files you want
          # to add to the container
          name: transactions-config-server-config-map
status: {}
