k8s/transactions-ihm-angular-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./k8s/ --controller deployment
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: transactions-ihm-angular
  name: transactions-ihm-angular
  namespace: transactions
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: transactions-ihm-angular
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./k8s/ --controller deployment
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/transactions-deployment-default: "true"
        io.kompose.service: transactions-ihm-angular
    spec:
      containers:
        - image: jugirard/transactions-ihm-angular:0.1.5.6
          name: transactions-ihm-angular
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/assets/environments/
      restartPolicy: Always
      volumes:
      - name: config-volume
        configMap:
          # Provide the name of the ConfigMap containing the files you want
          # to add to the container
          name: transactions-ihm-angular-config-map
status: {}
