k8s/transactions-sync-data-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./k8s/ --controller deployment
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: transactions-sync-data
  name: transactions-sync-data
  namespace: transactions
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: transactions-sync-data
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./k8s/ --controller deployment
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/transactions-deployment-default: "true"
        io.kompose.service: transactions-sync-data
    spec:
      containers:
        - image: jugirard/transactions-sync-process:latest
          name: transactions-sync-data
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
