k8s/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./k8s/ --controller deployment
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8080
  selector:
    io.kompose.service: keycloak
status:
  loadBalancer: {}
