k8s/transactions-config-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./k8s/ --controller deployment
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: transactions-config-server
  name: transactions-config-server
  namespace: transactions
spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
  selector:
    io.kompose.service: transactions-config-server
status:
  loadBalancer: {}
