k8s/transactions-ihm-angular-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./k8s/ --controller deployment
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: transactions-ihm-angular
  name: transactions-ihm-angular
  namespace: transactions
spec:
  ports:
    - name: "4200"
      port: 4200
      targetPort: 80
  selector:
    io.kompose.service: transactions-ihm-angular
status:
  loadBalancer: {}
