k8s/transactions-deployment-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: transactions-deployment-default
  namespace: transactions
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/transactions-deployment-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/transactions-deployment-default: "true"
